Fix spacing on restaurant show page

--- a/app/assets/stylesheets/components/restaurant_show/review.scss
+++ b/app/assets/stylesheets/components/restaurant_show/review.scss
@@ -29,14 +29,13 @@
 .user a {
   padding-top: 4px;
   color: #07BAB4;
-  // display: inline;
   display: block;
 }
 
 #review {
   margin-top: 20px;
   font-weight: normal;
-  width: 390px;
+  width: 380px;
 }
 
 #review .rating li {
